# web3-investor-rag

./: README.md  pyproject.toml
web3_investor_rag/dashboard/: agent.py  app.py  app_functions.py
