[tool.poetry]
name = "web3-investor-rag"
version = "0.1.0"
description = ""
authors = ["gabrielfior <fior.gbm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0, <=3.12.4"
streamlit = "^1.36.0"
pydantic = "^2.8.2"
crewai = {extras = ["tools"], version = "^0.35.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
